[package]
name = "ezhook"
version = "0.2.1"
edition = "2018"

authors = ["Parth Shastri"]
description = "Function hooking for x86"
repository = "https://github.com/cppio/ezhook"
license = "MIT"
keywords = ["hook", "detour", "function", "x86"]
categories = ["hardware-support", "no-std"]

[features]
trampoline = ["lde"]

[dependencies]
lde = { version = "0.3.0", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { version = "0.2.71", default-features = false }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["memoryapi"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
